k8s/platform/management-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: management-proxy
  namespace: management-proxy
  annotations:
    tailscale.com/hostname: pi-k3s
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - pi-k3s.chalupatech.com
      secretName: pi-k3s-tls
  rules:
    - host: pi-k3s.chalupatech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: management-proxy
                port:
                  number: 80
